--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,6 +3,7 @@
   <meta charset="utf-8">
 <title>Your awesome title | Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.</title>
 <link rel="stylesheet" href="/stylesheets/site.css.scss"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Your awesome title" /></head>
+<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
 <body class="big-huge-massive-container">
   <nav class="main-nav">
     <section class="main-nav main-nav__nav-item">
@@ -22,20 +23,20 @@
       <section class="main-content__item main-content__item--edge">
         <img class="giant-fighter" src="images/eyepatch_guy.jpg">
       </section>
-      <section class="main-content__item half-width">
-        <div class="grid">
-          <img class="quarter-width" src="images/bicep_headband_guy.png">
-          <img class="quarter-width" src="images/bicep_headband_guy.png">
-          <img class="quarter-width" src="images/bicep_headband_guy.png">
-          <img class="quarter-width" src="images/bicep_headband_guy.png">
-          <img class="quarter-width" src="images/bicep_headband_guy.png">
-          <img class="quarter-width" src="images/bicep_headband_guy.png">
-          <img class="quarter-width" src="images/bicep_headband_guy.png">
-          <img class="quarter-width" src="images/bicep_headband_guy.png">
-          <img class="quarter-width" src="images/bicep_headband_guy.png">
-          <img class="quarter-width" src="images/bicep_headband_guy.png">
-          <img class="quarter-width" src="images/bicep_headband_guy.png">
-          <img class="quarter-width" src="images/bicep_headband_guy.png">
+      <section class="main-content__item full-to-half main-content__item--grid">
+        <div class="image-grid">
+          <img src="images/bicep_headband_guy.png">
+          <img src="images/bicep_headband_guy.png">
+          <img src="images/bicep_headband_guy.png">
+          <img src="images/bicep_headband_guy.png">
+          <img src="images/bicep_headband_guy.png">
+          <img src="images/bicep_headband_guy.png">
+          <img src="images/bicep_headband_guy.png">
+          <img src="images/bicep_headband_guy.png">
+          <img src="images/bicep_headband_guy.png">
+          <img src="images/bicep_headband_guy.png">
+          <img src="images/bicep_headband_guy.png">
+          <img src="images/bicep_headband_guy.png">
         </div>
         <img class="versus" src="images/VS.png">
       </section>
