adds temporary logo image, centeres logo image and adds live reload so that the server refreshes the page whenever you save a file

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,20 +5,31 @@
 <link rel="stylesheet" href="/stylesheets/site.css.scss"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Your awesome title" /></head>
 <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
 <body class="big-huge-massive-container">
-  <nav class="main-nav">
+<!--   <nav class="main-nav">
     <section class="main-nav main-nav__nav-item">
       <a class="main-nav__link">Alex Heath</a>
     </section>
-    <section class="main-nav main-nav__nav-item">
-      <a class="main-nav__link center block">
-        <img class="logo">
+    <section class="main-nav main-nav__nav-item logo">
+      <a class="main-nav__link">
+        <img src="images/classic_alex.png" class="logo-image">
       </a>
     </section>
-    <section class="main-nav main-nav__nav-item right">
-      <a class="main-nav__link inline">About</a>
-      <a class="main-nav__link inline">Contact</a>
+    <section class="main-nav main-nav__nav-item">
+      <a class="main-nav__link">About</a>
+      <a class="main-nav__link">Contact</a>
     </section>
-  </nav>
+  </nav> -->
+
+  <ul class="main-nav">
+    <li class="main-nav__list-item left"><a class="main-nav__link" href="#">Alex Heath</a></li>
+    <li class="main-nav__list-item"><a class="main-nav__link" href="#"><img src="images/classic_alex.png" class="logo"></a></li>
+    <div class="right">
+      <li class="main-nav__list-item"><a class="main-nav__link" href="#">About</a></li>
+      <li class="main-nav__list-item"><a class="main-nav__link" href="#">Contact</a></li>
+    </div>
+  </ul>
+
+
   <section class="main-content">
       <section class="main-content__item main-content__item--edge">
         <img class="giant-fighter" src="images/eyepatch_guy.jpg">
