--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -20,17 +20,17 @@ img {
   margin: 0 auto;
 }
 
-.main-nav {
-  border: 1px solid $black;
-}
+// .main-nav {
+//   border: 1px solid $black;
+// }
 
-.main-nav__nav-item {
-  border: 1px solid $mid-blue;
-  display: inline-block;
-}
+// .main-nav__nav-item {
+//   border: 1px solid $mid-blue;
+//   display: inline-block;
+// }
 
 .logo {
-  width: 10px;
+  width: 200px;
 }
 
 .main-content {
@@ -89,4 +89,19 @@ img {
 .main-content__item {
   border: solid 1px green;
   vertical-align: top;
+}
+
+.main-nav {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+.main-nav__list-item {
+  display: inline;
+}
+
+.main-nav__link {
+  display: inline-block;
+  padding: 10px;
 }
